--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                   О КОМПАНИИ
                </h3>
                <a href="#" class="footer_text">
-                  Партнёоская программа
+                  Партнёрская программа
                </a>
                <a href="#" class="footer_text">
                   Вакансии
